S-01035 - Data acquisition (pressure sensor): 1. implemented DMU class for raw data interpretation; 2. added a single-shot FD timer to ensure non-blocking delay between MS commands and data reads; 3. refactored MS5803 implementation accordingly. 4. other minor improvements.

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -10,6 +10,7 @@ RM := rm -rf
 -include sources.mk
 -include src/sys/subdir.mk
 -include src/imu/subdir.mk
+-include src/dmu/subdir.mk
 -include src/devices/subdir.mk
 -include src/controller/subdir.mk
 -include src/subdir.mk
